@@ -32,7 +32,6 @@ Requirements
 
 * Python 2.7 - 3.5
 * Requests 2.0+
-* **Optional** - ``simplejson``
 
 
 Installation
