@@ -1,5 +1,6 @@
 === 1.0.0pre1 (Unreleased) ===
 
+- Remove references to simplejson since py2.6 is not supported any more
 - Change module namespace to 'skisolr'
 - Use nose and coverage for tests
 - Remove Python 2.6 support
